node.js package.json update

--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-     "name": "mukhin_chat",
-     "description": "example chat application with socket.io",
+     "name": "casenexus_roulette",
+     "description": "case roulette",
      "version": "0.0.1",
      "dependencies": {
         "express": "2.4.6",
         "socket.io": "0.8.4"
      }
+}
+
+"engines": {
+    "node": "0.8.x"
+    ,"npm": "1.1.x"
 }
