--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-     "name": "casenexus_roulette",
-     "description": "case roulette",
-     "version": "0.0.1",
-     "dependencies": {
-        "express": "2.4.6",
-        "socket.io": "0.8.4"
-     }
-}
+	"name": "casenexus_roulette",
+	"description": "case roulette",
+	"version": "0.0.1",
+	"dependencies": {
+		"express": "2.4.6",
+		"socket.io": "0.8.4"
+	},
 
-"engines": {
-    "node": "0.8.x"
-    ,"npm": "1.1.x"
+	"engines": {
+		"node": "0.8.x",
+		"npm": "1.1.x"
+	}
 }
